--- a/src/routes/Home/Header.css
+++ b/src/routes/Home/Header.css
@@ -29,22 +29,16 @@ header .btn-secondary {
     background-color: transparent;
 }
 
-header * {
+header > * {
     font-size: 16px;
     color: white;
 }
-
-header .dropdown:last-of-type button.btn-secondary {
-    padding-left: 6px;
-}
-
 
 #header-menu {
     display: flex;
     justify-content: center;
     align-items:center;
 }
-
 
 hr {
     color:white;
