--- a/src/routes/Home/Row.css
+++ b/src/routes/Home/Row.css
@@ -2,31 +2,56 @@
     margin: auto;
 }
 
-.row {
+.row-wrapper {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 24px;
+    width:100%;
+    height: 100%;
+    /* box-sizing: border-box; */
+    /* flex-wrap: nowrap; */
+    /* gap: 24px; */
+    align-items:end;
     justify-content: center;
     margin: 0;
+}
+
+.row {
+    display: flex;
+    width:100%;
+    box-sizing: border-box;
+    flex-wrap: nowrap;
+    gap: 24px;
+    align-items:end;
+    margin: 0;
+    overflow-x:auto;
+    max-width: 100vw;
+    overflow-y: hidden;
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
 .height-240px-container {
     height: 240px
 }
 
-@media (max-width:1440px) {
+.row .column:first-child, .row .column:last-child {
+    padding: 0;
+
+}
+
+/* @media (max-width:1440px) {
     .row .column {
         padding: 0;
     }
-}
+} */
 .column {
     width: 302px;
     padding: 24px 0px 0px 0px;
 }
 
-.row .column:first-child, .row .column:last-child {
-    padding: 0;
+/* Hide scrollbar for Chrome, Safari and Opera */
+.row::-webkit-scrollbar {
+    display: none;
 }
 
 .item {
@@ -37,6 +62,7 @@
     gap: 8px;
     background-color: rgba(0, 0, 0, 0.75);
     background-repeat: no-repeat;
+    height: 100%;
 }
 
 .item-footer {
@@ -51,10 +77,6 @@
 .item-footer {
     height: 280px;
 }
-
-/* .item-footer-240-height-container {
-    height: 160px;
-} */
 
 .item-footer-title p {
     color:white;
