--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -12,6 +12,7 @@
     gap: 24px;
     overflow-x:auto;
     overflow-y: hidden;
+    align-items: end;
     /* Hide scrollbar for IE, Edge and Firefox */
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
@@ -41,6 +42,6 @@
     margin: 0;
 }
 
-.row > :not(:first-child):not(:last-child) {
-    margin-top:auto;
+.row > :first-child,  .row > :last-child{
+    margin-bottom:auto;
 }
