--- a/src/routes/Home/Advantage.css
+++ b/src/routes/Home/Advantage.css
@@ -20,7 +20,7 @@
     align-items:center;
     gap: 64px;
     flex-wrap: wrap;
-    background-color:green;
+    /* background-color:green; */
     background-color: rgba(0, 0, 0, 85%);
     background-image:  url("./images/background-image-advantage.jpg");
     background-blend-mode:overlay;
