--- a/src/routes/Home/Progress.css
+++ b/src/routes/Home/Progress.css
@@ -1,17 +1,18 @@
 .progress {
-    width: 1440px;
-    max-width: 100%;
-    height: 1111px;
+    width: 100%;
+    /* max-width: ; */
+    height: max-content;
     border-radius: 40px 40px 0px 0px;
-    padding: 100px 80px 0px 80px;
+    padding: 100px 80px 20px 80px;
     display: flex;
     gap: 200px;
     justify-content: center;
     align-items: center;
+    background-color: white;
 }
 
 .progress .content {
-    width: 1280px;
+    width: auto;
     height: 1011px;
 }
 
@@ -28,7 +29,7 @@
     position: absolute;
 }
 
-.progress .heading h3 {
+.progress .heading h4 {
     width: 411px;
     height: 67px;
     font-weight: 500;
@@ -36,6 +37,15 @@
     line-height: 67.2px;
     color: black;
     margin: 0;
+}
+
+.card-content > p {
+    font-family: "Inter", sans-serif;
+    opacity: 50%;
+    margin: auto;
+    line-height: 24px;
+    font-weight: 400;
+    font-size: 16px;
 }
 
 #intro {
@@ -48,53 +58,85 @@
     line-height: 24px;
 }
 
-.progress .grid {
-    position: relative;
+.progress .grid-card {
+    /* position: relative; */
     width: 100%;
+    max-width: 1280px;
     height: 100%;
+    display: grid;
+    grid-auto-rows: 1fr;
+    /* grid-template-rows: min-content; */
+    grid-template-columns: auto;
+    /* grid-row-gap: 15px; */
+    grid-gap: 15px;
 }
 
-.progress .grid .card {
-    position: absolute;
+.progress .grid-card .card {
     border-radius: 20px;
     box-shadow: 8px 8px 20px 1px rgba(0, 0, 0, 0.02);
-    padding: 40px 32px 40px 40px;
+    padding: 40px 32px 0px 40px;
     display: flex;
     flex-direction: column;
-    justify-content: left;
-    align-items: center;
-    width: 411px;
-    /* height: 400px; */
+    overflow: hidden;
+    min-height: 400px;
+    position: relative;
+    max-width: 411px;
+    height: auto;
+}
+
+.icon-card {
+    width: 56px;
+    height: 56px;
+}
+
+.card-content {
+    height: auto;
 }
 
 #card1 {
-    top: 187px;
-    height: 400px;
+    grid-row: 2 / 4;
+    grid-column: 1 / 2;
 }
 
 #card2 {
-    left: 435px;
-    height: 400px;
+    grid-row: 1 / 3;
+    grid-column: 2 / 3;
 }
 
 #card3 {
-    left: 869px;
-    height: 587px;
+    grid-row: 1 / 4;
+    grid-column: 3 / 4;
 }
 
 #card4 {
-    top: 611px;
-    height: 400px;
+    grid-row: 4 / 6;
+    grid-column: 1 / 2;
 }
 
 #card5 {
-    left: 435px;
-    top: 424px;
-    height: 587px;
+    grid-row: 3 / 6;
+    grid-column: 2 / 3;
+}
+
+#card5 .count-progress, #card3 .count-progress {
+    top:450px;
 }
 
 #card6 {
-    top: 611px;
-    left: 869px;
-    height: 400px;
+    grid-row: 4 / 6;
+    grid-column: 3 / 4;
+}
+.count-progress {
+    font-weight: 700;
+    font-size: 200px;
+    background: linear-gradient(180deg, rgba(138, 162, 169, 0.5) 0%, #FFFFFF 68.33%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    text-align: right;
+    position: absolute;
+    top: 250px;
+    right: 5px;
+    opacity: 80%;
+
 }
