Add 2 new pages

--- a/src/components/CallToAction.css
+++ b/src/components/CallToAction.css
@@ -20,7 +20,7 @@
     border-radius: 20px;
     gap: 40px;
     padding: 100px 80px 100px 80px;
-    background-image: url("./images/call-to-action=background-image.png");
+    background-image: url("../images/call-to-action=background-image.png");
     background-size: 100%;
     background-repeat: no-repeat;
     background-size: cover;
