--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -3,12 +3,14 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
-    background-color: black;
+    justify-content: center;
+    align-items:center;
     width: 100%;
 }
 
 .projects * {
-    color: white;
+    background-blend-mode:normal;
+    color:white;
 }
 
 .projects h2 {
