--- a/src/components/ServiceItem.css
+++ b/src/components/ServiceItem.css
@@ -1,8 +1,8 @@
 .service-item-minimized:hover .image-service-item,
 .service-item-default:hover .image-service-item {
     opacity:50%;
-    transition: opacity .3s ease-out,
-    transform .3s ease-out;
+    transition: transform .3s ease-out,
+    opacity .3s ease-out;
     transform: scale(1.21);
 }
 
@@ -31,20 +31,20 @@
 }
 
 .image-service-item {
-    z-index:1;
+    z-index:2;
     position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
     opacity: 75%;
     /* background:none; */
-    transition: opacity .3s ease-out,
-    transform .3s ease-out;
+    transition: transform 0.3s ease-out,
+    opacity 0.3s ease-out;
 }
 
 .service-item-minimized {
     border: 1px solid rgba(238, 238, 238, 0.6);
-    z-index: 0;
+    z-index: 1;
     overflow: hidden;
     position: relative;
     width: 302px;
@@ -53,11 +53,12 @@
     padding: 80px 0px 0px 0px;
     display: flex;
     gap:8px;
+    background: black;
 }
 
 .service-item-default {
     border: 1px solid rgba(238, 238, 238, 0.6);
-    z-index: 0;
+    z-index: 1;
     overflow: hidden;
     position: relative;
     width: 302px;
@@ -66,11 +67,12 @@
     display: flex;
     padding: 80px 0px 0px 0px;
     gap: 8px;
+    background: black;
 }
 
 
 .service-item-footer {
-    z-index: 2;
+    z-index: 3;
     align-items: end;
     height: 100%;
     width: 100%;
