--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,15 @@ html * {
   font-optical-sizing: auto;
   font-style: normal;
 }
+
+.background-image {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 10%;
+  filter: blur(40px);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 0%, #000000 100%),
+radial-gradient(199.16% 100% at 50% 0%, rgba(216, 30, 91, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
+}
