--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body, html{
   margin: 0;
   width: 100%;
   height: 100%;
-  background-color:black;
+  /* background-color:black; */
 }
 
 html * {
