--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,15 @@ html * {
   background: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 0%, #000000 100%),
 radial-gradient(199.16% 100% at 50% 0%, rgba(216, 30, 91, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
 }
+
+.blue-box-container {
+  width: 100%;
+  height: 720px;
+  padding: 0px 80px 64px 80px;
+  gap: 100px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: radial-gradient(50% 63.63% at 50% 36.37%, rgba(138, 162, 169, 0) 0%, rgba(138, 162, 169, 0.1) 100%);
+}
