--- a/src/components/Advantage.css
+++ b/src/components/Advantage.css
@@ -1,6 +1,6 @@
 .advantage {
     width: 100%;
-    height: 726px;
+    /* height: 726px; */
     border-radius: 0 0 40px 40px;
     background-color: white;
     padding: 0px 80px 80px 80px;
