--- a/src/components/MemberItem.css
+++ b/src/components/MemberItem.css
@@ -59,7 +59,7 @@
     gap: 12px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: end;
     box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.4);
 }
 
@@ -70,8 +70,12 @@
     padding: 10px 0px 10px 0px;
     gap: 0px;
     border-radius: 100px;
-    filter: blur(20px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* filter: blur(20px); */
     background: transparent;
+    backdrop-filter: blur(20px);
     border: 1px solid rgba(255, 255, 255, 0.05)    
 }
 
