--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,23 @@ radial-gradient(199.16% 100% at 50% 0%, rgba(216, 30, 91, 0.1) 0%, rgba(0, 0, 0,
   align-items: center;
   background: radial-gradient(50% 63.63% at 50% 36.37%, rgba(138, 162, 169, 0) 0%, rgba(138, 162, 169, 0.1) 100%);
 }
+
+.nav-link-active {
+  color:rgba(254, 183, 0, 1) !important;
+}
+
+.opacity-50 {
+  opacity: 50%;
+}
+
+.font-inter {
+  font-family: "Inter", sans-serif;
+}
+
+.font-weight-400 {
+  font-weight: 400;
+}
+
+.font-size-16 {
+  font-size: 16px;
+}
