--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -18,6 +18,10 @@
     scrollbar-width: none;  /* Firefox */
 }
 
+.row > * {
+    margin-bottom: auto;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .row::-webkit-scrollbar {
     display: none;
@@ -42,9 +46,9 @@
     height: var(--height-row-wrapper-minimized-service-item);
 }
 
-.row-service-item > :first-child,  .row-service-item > :last-child{
+/* .row-service-item > :first-child,  .row-service-item > :last-child{
     margin-bottom:auto;
-}
+} */
 
 .news-cards-wrapper {
     display: flex;
@@ -84,6 +88,6 @@
     height: 464px;
 }
 
-.row-members > :first-child,  .row-members > :last-child{
+/* .row-members > :first-child,  .row-members > :last-child{
     margin-bottom:auto;
-}
+} */
