--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,15 @@ radial-gradient(199.16% 100% at 50% 0%, rgba(216, 30, 91, 0.1) 0%, rgba(0, 0, 0,
 .font-size-16 {
   font-size: 16px;
 }
+
+.width-100 {
+  width: 100%;
+}
+
+.height-100 {
+  height: 100%;
+}
+
+.width-auto {
+  width: auto;
+}
