--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,7 @@ radial-gradient(199.16% 100% at 50% 0%, rgba(216, 30, 91, 0.1) 0%, rgba(0, 0, 0,
 }
 
 .height-100 {
-  height: 100%;
+  height: 100% !important;
 }
 
 .width-auto {
