Add desktop version of careers page

--- a/src/components/ModalBox.css
+++ b/src/components/ModalBox.css
@@ -42,7 +42,7 @@
 }
 
 .modal-box-action {
-    width: 168.31px;
+    width: auto;
     height: 72px;
     padding: 24px 0px 0px 0px;
     gap: 4px;
