--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -103,7 +103,7 @@
 }
 
 #gallery-item-3 {
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.64) 100%);
+    /* background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.64) 100%); */
     padding: 40px;
     top: -162px;
     left: 652px;
