--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,10 @@ html * {
 }
 
 .background-image {
-  width: 100%;
+  min-width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
-  left: 0;
   opacity: 10%;
   filter: blur(40px);
   background: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 0%, #000000 100%),
@@ -32,6 +31,18 @@ radial-gradient(199.16% 100% at 50% 0%, rgba(216, 30, 91, 0.1) 0%, rgba(0, 0, 0,
   padding: 0px 80px 64px 80px;
   gap: 100px;
   border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: radial-gradient(50% 63.63% at 50% 36.37%, rgba(138, 162, 169, 0) 0%, rgba(138, 162, 169, 0.1) 100%);
+}
+
+
+.blue-box-container-no-border-radius {
+  width: 100%;
+  height: 862px;
+  padding: 0px 80px 64px 80px;
+  gap: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -54,6 +65,10 @@ radial-gradient(199.16% 100% at 50% 0%, rgba(216, 30, 91, 0.1) 0%, rgba(0, 0, 0,
   font-weight: 400;
 }
 
+.font-weight-500 {
+  font-weight: 500;
+}
+
 .font-size-16 {
   font-size: 16px;
 }
@@ -68,4 +83,10 @@ radial-gradient(199.16% 100% at 50% 0%, rgba(216, 30, 91, 0.1) 0%, rgba(0, 0, 0,
 
 .width-auto {
   width: auto;
+}
+
+.font-title {
+  font-size: 56px;
+  font-weight: 500;
+  line-height: 67.2px;
 }
