--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,10 @@ radial-gradient(199.16% 100% at 50% 0%, rgba(216, 30, 91, 0.1) 0%, rgba(0, 0, 0,
   opacity: 50%;
 }
 
+.opacity-40 {
+  opacity: 40%;
+}
+
 .font-inter {
   font-family: "Inter", sans-serif;
 }
@@ -77,6 +81,10 @@ radial-gradient(199.16% 100% at 50% 0%, rgba(216, 30, 91, 0.1) 0%, rgba(0, 0, 0,
   width: 100%;
 }
 
+.line-height-24{
+  line-height: 24px;
+}
+
 .height-100 {
   height: 100% !important;
 }
@@ -89,4 +97,8 @@ radial-gradient(199.16% 100% at 50% 0%, rgba(216, 30, 91, 0.1) 0%, rgba(0, 0, 0,
   font-size: 56px;
   font-weight: 500;
   line-height: 67.2px;
+}
+
+.gap-16 {
+  gap: 16px;
 }
