--- a/src/styles/ServiceItem.css
+++ b/src/styles/ServiceItem.css
@@ -42,6 +42,11 @@
     opacity 0.3s ease-out;
 }
 
+.image-service-item > * {
+    width: 100%;
+    height: 100%;
+}
+
 .service-item-minimized {
     border: 1px solid rgba(238, 238, 238, 0.6);
     z-index: 1;
