--- a/src/styles/NewsCards.css
+++ b/src/styles/NewsCards.css
@@ -1,3 +1,37 @@
+.news-cards-wrapper {
+    display: flex;
+    gap: 16px;
+    flex-direction: column;
+    width: auto;
+    height: auto;
+}
+
+.content-news-cards {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    width: 302px;
+    height: auto;
+}
+
+.content-news-cards * {
+    margin: 0;
+}
+
+.title-content-news-cards {
+    font-family: "Inter", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+}
+
+.date-news-cards {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    opacity: 50%;
+}
+
 .card-cover {
     display: flex;
     flex-direction: column;
@@ -8,11 +42,12 @@
     width: 302px;
     z-index: 0;
     overflow: hidden;
+    cursor: pointer;
 }
 
 .card-cover:hover .card-cover-image {
     transform: scale(1.21);
-    transition: transform .3s ease-out;
+    transition: transform .3s ease-out, opacity .3s ease-out !important;
 }
 
 .card-cover-tag {
@@ -46,7 +81,7 @@
     z-index: 1;
     width: 100%;
     height: 100%;
-    transition: transform .3s ease-out;
+    transition: transform .3s ease-out !important;
 }
 
 .card-cover-l-size {
