--- a/src/routes/Blog/ListBLogs.css
+++ b/src/routes/Blog/ListBLogs.css
@@ -4,4 +4,25 @@
 
 .row-blogs {
     gap: 40px;
+    min-width: 290px;
+}
+
+.pagination {
+    display: inline-block;
+}
+
+.pagination div {
+    cursor: pointer;
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+    border: 1px solid #ddd;
+}
+
+.pagination a.active {
+    background-color: #4CAF50;
+    color: white;
+    border: 1px solid #4CAF50;
 }
